@@ -79,6 +79,8 @@ makeCross = function(pop,crossPlan,nProgeny=1,
                 mother=pop@id[crossPlan[,1]],
                 father=pop@id[crossPlan[,2]],
                 simParam=simParam,
+                iMother=pop@iid[crossPlan[,1]],
+                iFather=pop@iid[crossPlan[,2]],
                 femaleParentPop=pop,
                 maleParentPop=pop))
 }
@@ -337,6 +339,8 @@ makeCross2 = function(females,males,crossPlan,nProgeny=1,simParam=NULL){
                 mother=females@id[crossPlan[,1]],
                 father=males@id[crossPlan[,2]],
                 simParam=simParam,
+                iMother=females@iid[crossPlan[,1]],
+                iFather=males@iid[crossPlan[,2]],
                 femaleParentPop=females,
                 maleParentPop=males))
 }
@@ -506,11 +510,11 @@ self = function(pop,nProgeny=1,parents=NULL,keepParents=TRUE,
   }
   if(keepParents){
     return(newPop(rawPop=rPop,
-                  mother=rep(pop@id,each=nProgeny),
-                  father=rep(pop@id,each=nProgeny),
-                  origM=rep(pop@mother,each=nProgeny),
-                  origF=rep(pop@father,each=nProgeny),
+                  mother=rep(pop@mother,each=nProgeny),
+                  father=rep(pop@father,each=nProgeny),
                   simParam=simParam,
+                  iMother=rep(pop@iid,each=nProgeny),
+                  iFather=rep(pop@iid,each=nProgeny),
                   femaleParentPop=pop,
                   maleParentPop=pop))
   }else{
@@ -518,6 +522,8 @@ self = function(pop,nProgeny=1,parents=NULL,keepParents=TRUE,
                   mother=rep(pop@id,each=nProgeny),
                   father=rep(pop@id,each=nProgeny),
                   simParam=simParam,
+                  iMother=rep(pop@iid,each=nProgeny),
+                  iFather=rep(pop@iid,each=nProgeny),
                   femaleParentPop=pop,
                   maleParentPop=pop))
   }
@@ -586,20 +592,22 @@ makeDH = function(pop,nDH=1,useFemale=TRUE,keepParents=TRUE,
   }
   if(keepParents){
     return(newPop(rawPop=rPop,
-                  mother=rep(pop@id,each=nDH),
-                  father=rep(pop@id,each=nDH),
-                  origM=rep(pop@mother,each=nDH),
-                  origF=rep(pop@father,each=nDH),
-                  isDH=TRUE,
+                  mother=rep(pop@mother, each=nDH),
+                  father=rep(pop@father, each=nDH),
                   simParam=simParam,
+                  isDH=TRUE,
+                  iMother=rep(pop@iid, each=nDH),
+                  iFather=rep(pop@iid, each=nDH),
                   femaleParentPop=pop,
                   maleParentPop=pop))
   }else{
     return(newPop(rawPop=rPop,
-                  mother=rep(pop@id,each=nDH),
-                  father=rep(pop@id,each=nDH),
-                  isDH=TRUE,
+                  mother=rep(pop@id, each=nDH),
+                  father=rep(pop@id, each=nDH),
                   simParam=simParam,
+                  isDH=TRUE,
+                  iMother=rep(pop@iid, each=nDH),
+                  iFather=rep(pop@iid, each=nDH),
                   femaleParentPop=pop,
                   maleParentPop=pop))
   }
