@@ -1,7 +1,7 @@
 # README #
 
-The website for AlphaSimR is under development and has only been made available for testing at this time. This page will change when the website is ready for widespread use.
+The website for AlphaSimR is currently under development and has only been made available for testing at this time. This page will change when the website is ready for widespread use.
 
-A manuscript detailing the use of AlphaSimR and the theory behind it been accepted. You can view an advanced copy of the manuscript here: https://academic.oup.com/g3journal/advance-article/doi/10.1093/g3journal/jkaa017/6025179
+A manuscript detailing the use of AlphaSimR and the theory behind it been published by G3. https://doi.org/10.1093/g3journal/jkaa017
 
 
