@@ -16,7 +16,7 @@
 
 \item{i}{index of chromosomes}
 
-\item{...}{aditional 'MapPop' objects}
+\item{...}{additional 'MapPop' objects}
 }
 \description{
 Extends \code{\link{RawPop-class}} to add a genetic map. 
@@ -34,7 +34,7 @@ for creating initial populations and setting traits in the
 \section{Slots}{
 
 \describe{
-\item{\code{genMap}}{"matrix" of chromsome genetic maps}
+\item{\code{genMap}}{"matrix" of chromosome genetic maps}
 
 \item{\code{centromere}}{vector of centromere positions}
 }}
